# jeff-ai

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  react-router.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yaml
src/: App.tsx  entry.client.tsx  main.tsx  root.tsx  routes.ts  styles.css
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: aggregate_device.rs  ca_tap_description.rs  helpers.rs  mod.rs  recorder.rs  volume.rs
src-tauri/src/audio/macos/: aggregate_device.rs  ca_tap_description.rs  helpers.rs  mod.rs  tap.rs  volume.rs
src-tauri/src/audio/windows/: volume.rs
src-tauri/src/handlers/: audio_handler.rs  message_handler.rs  mod.rs  settings_handler.rs  task_handler.rs  user_handler.rs  weather_handler.rs
src-tauri/src/models/: mod.rs  user.rs
src-tauri/src/state/: app_state.rs  mod.rs
src/components/: app-sidebar.tsx  document-editor.tsx  microphone-toggle.tsx  mode-toggle.tsx  rewrite-form.tsx  rewrite-toggle.tsx  system-output-toggle.tsx  theme-provider.tsx
src/components/document-editor/: index.tsx  menu-bar.tsx  styles.css
src/components/tasks/: types.ts  (+3 more)
src/helpers/: notification.ts  updater.ts
src/hooks/: use-dropdown-position.ts  use-user-settings.ts
src/machines/: delete-task-machine.ts  mode-machine.ts
src/pages/: home.tsx  recordings.tsx  refinements.tsx  search.tsx  settings.tsx  tasks.tsx
src/types/: commands.ts
(+5 files in other folders)
