[package]
name = "jeff-ai"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "jeff_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-log = "2"
log = "0.4"
cpal = "0.15.3"
tokio = { version = "1.42.0", features = ["full"] }
hound = "3.5.1"
bytes = "1.9.0"
crossbeam = "0.8.4"
tempfile = "3.10.1"

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.12.1"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
rdev = "0.5.3"
tauri-plugin-global-shortcut = "2.0.0-beta"
tauri-plugin-updater = "2"
